--- a/app/src/main/res/layout/fragment_room_detail.xml
+++ b/app/src/main/res/layout/fragment_room_detail.xml
@@ -299,7 +299,7 @@
                         />
 
                     <ImageView
-                        android:id="@+id/imageItem"
+                        android:id="@+id/imageRoom"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
