--- a/app/src/main/res/layout/task_list_row.xml
+++ b/app/src/main/res/layout/task_list_row.xml
@@ -26,6 +26,7 @@
             android:orientation="horizontal"
             >
             <TextView
+                android:id="@+id/textItemType"
                 android:text="@string/item"
                 android:layout_weight="3"
                 android:textSize="12sp"
@@ -49,6 +50,7 @@
             android:orientation="horizontal"
             >
             <TextView
+                android:id="@+id/textLocation"
                 android:text="Location"
                 android:layout_weight="3"
                 android:textSize="12sp"
