--- a/app/src/main/res/menu/reservation_list_actions.xml
+++ b/app/src/main/res/menu/reservation_list_actions.xml
@@ -9,5 +9,5 @@
     <item android:id="@+id/menu_add"
         android:icon="@drawable/ic_menu_add"
         resortmanager:showAsAction="ifRoom|collapseActionView"
-        android:title="Add Room"/>
+        android:title="New Reservation"/>
 </menu>
