--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,24 @@
             android:layout_marginTop="25dp"
             android:enabled="true"
             android:longClickable="true"
+            android:textSize="16sp"
             android:textStyle="bold"
+            android:background="@drawable/button_shape"
+            />
+
+        <Button
+            android:id="@+id/reservations_button"
+            android:text="Reservations"
+            android:onClick="onReservationsClick"
+            android:layout_width="157dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:clickable="true"
+            android:layout_marginTop="85dp"
+            android:enabled="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:longClickable="true"
             android:background="@drawable/button_shape"
             />
 
@@ -43,8 +60,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:clickable="true"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="145dp"
             android:enabled="true"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:longClickable="true"
             android:background="@drawable/button_shape"
@@ -57,9 +75,10 @@
             android:layout_width="157dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="175dp"
+            android:layout_marginTop="205dp"
             android:clickable="true"
             android:enabled="true"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:longClickable="true"
             android:background="@drawable/button_shape"
@@ -72,9 +91,10 @@
             android:layout_width="157dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="265dp"
             android:clickable="true"
             android:enabled="true"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:longClickable="true"
             android:background="@drawable/button_shape"
@@ -90,6 +110,7 @@
             android:layout_marginTop="325dp"
             android:clickable="true"
             android:enabled="true"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:longClickable="true"
             android:background="@drawable/button_shape"
@@ -102,9 +123,10 @@
             android:layout_width="157dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="400dp"
+            android:layout_marginTop="385dp"
             android:clickable="true"
             android:enabled="true"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:longClickable="true"
             android:background="@drawable/button_shape"
