--- a/app/src/main/res/layout/dialog_service_call.xml
+++ b/app/src/main/res/layout/dialog_service_call.xml
@@ -19,14 +19,15 @@
         android:layout_marginBottom="5dp"
         >
         <TextView
+            android:id="@+id/textItemLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/instrument"
+            android:text="Item"
             android:textStyle="bold"
             android:layout_weight="2"
             />
         <TextView
-            android:id="@+id/textInstrument"
+            android:id="@+id/textItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
