--- a/app/src/main/res/layout/fragment_reservation_detail.xml
+++ b/app/src/main/res/layout/fragment_reservation_detail.xml
@@ -29,7 +29,6 @@
 
                 <!-- Reservation Name -->
                 <LinearLayout
-                    android:id="@+id/roomNameRow"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -56,6 +55,41 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:inputType="textCapWords|textMultiLine"
+                        android:cursorVisible="true"
+                        android:background="@drawable/textview_shape"
+                        android:layout_marginRight="5dp"
+                        />
+
+                </LinearLayout>
+
+                <!-- Contact Info -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    >
+
+                    <TextView
+                        android:layout_weight="3"
+                        android:textSize="12sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Contact Info"
+                        android:padding="5dp"
+                        />
+
+                    <EditText
+                        android:id="@+id/textContactInfo"
+                        android:hint="Mobile #, email etc."
+                        android:layout_weight="1"
+                        android:textSize="12sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:inputType="textMultiLine"
                         android:cursorVisible="true"
                         android:background="@drawable/textview_shape"
                         android:layout_marginRight="5dp"
