--- a/app/src/main/res/layout/report_list_row.xml
+++ b/app/src/main/res/layout/report_list_row.xml
@@ -32,7 +32,7 @@
             android:layout_height="5dp"
             />
         <TextView
-            android:id="@+id/textLocation"
+            android:id="@+id/textReservationDates"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
