--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -93,7 +93,7 @@
                         android:layout_weight="1"
                         >
                         <RadioButton
-                            android:text="Instrument"
+                            android:text="Equipment"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/instrumentRadioButton"
