--- a/app/src/main/res/layout/fragment_report_detail.xml
+++ b/app/src/main/res/layout/fragment_report_detail.xml
@@ -57,7 +57,7 @@
                     android:padding="5dp"
                     android:inputType="textCapWords|textMultiLine"
                     android:cursorVisible="true"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -92,7 +92,7 @@
                     android:padding="5dp"
                     android:inputType="textMultiLine"
                     android:cursorVisible="true"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -125,7 +125,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -158,7 +158,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -191,7 +191,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -221,7 +221,7 @@
                     android:layout_height="wrap_content"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
             </LinearLayout>
@@ -271,7 +271,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -305,13 +305,13 @@
                     android:padding="5dp"
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
             </LinearLayout>
 
-            <!-- Adult Charges -->
+            <!-- Charges per Adult -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -325,7 +325,7 @@
                     android:textSize="12sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Adult Charges Per Day"
+                    android:text="Charges per Adult Per Day"
                     android:padding="5dp"
                     />
 
@@ -338,7 +338,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -359,7 +359,7 @@
                     android:textSize="12sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Child Charges Per Day"
+                    android:text="Charges per Child Per Day"
                     android:padding="5dp"
                     />
 
@@ -372,7 +372,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -405,7 +405,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -438,7 +438,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
@@ -471,7 +471,7 @@
                     android:inputType="numberDecimal"
                     android:cursorVisible="true"
                     android:padding="5dp"
-                    android:background="@drawable/textview_shape"
+                    android:background="@drawable/textview_shape_readonly"
                     android:layout_marginRight="5dp"
                     />
 
