--- a/app/src/main/res/layout/dialog_inventory_task_done.xml
+++ b/app/src/main/res/layout/dialog_inventory_task_done.xml
@@ -19,7 +19,8 @@
         android:layout_marginBottom="10dp"
         >
         <TextView
-            android:text="Quantity"
+            android:id="@+id/textMessage"
+            android:text="Quantity Added"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
