--- a/app/src/main/res/layout/fragment_reservation_detail.xml
+++ b/app/src/main/res/layout/fragment_reservation_detail.xml
@@ -62,7 +62,7 @@
 
                 </LinearLayout>
 
-                <!-- Contact Info -->
+                <!-- Phone # -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -77,13 +77,48 @@
                         android:textSize="12sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Contact Info"
+                        android:text="Phone Number"
                         android:padding="5dp"
                         />
 
                     <EditText
-                        android:id="@+id/textContactInfo"
-                        android:hint="Mobile #, email etc."
+                        android:id="@+id/textPhoneNumber"
+                        android:hint="Mobile # or Landline # with STD code"
+                        android:layout_weight="1"
+                        android:textSize="12sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:inputType="numberDecimal"
+                        android:cursorVisible="true"
+                        android:background="@drawable/textview_shape"
+                        android:layout_marginRight="5dp"
+                        />
+
+                </LinearLayout>
+
+                <!-- E-mail -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    >
+
+                    <TextView
+                        android:layout_weight="3"
+                        android:textSize="12sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="E-mail Address"
+                        android:padding="5dp"
+                        />
+
+                    <EditText
+                        android:id="@+id/textEmailAddress"
+                        android:hint="e.g. a@b.com"
                         android:layout_weight="1"
                         android:textSize="12sp"
                         android:layout_width="match_parent"
