--- a/app/src/main/res/menu/reservation_detail_actions.xml
+++ b/app/src/main/res/menu/reservation_detail_actions.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:resortmanager="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_save"
-        android:icon="@drawable/ic_menu_save"
-        resortmanager:showAsAction="ifRoom|collapseActionView"
-        android:title="@string/menu_save"/>
-    <item android:id="@+id/menu_revert"
-        android:icon="@drawable/ic_menu_revert"
-        resortmanager:showAsAction="ifRoom|collapseActionView"
-        android:title="@string/menu_revert"/>
     <item android:id="@+id/menu_checkin"
         android:icon="@drawable/ic_menu_checkin"
         resortmanager:showAsAction="ifRoom|collapseActionView"
@@ -21,6 +13,26 @@
         android:icon="@drawable/ic_success"
         resortmanager:showAsAction="ifRoom|collapseActionView"
         android:title="Complete Checkout"/>
+    <item android:id="@+id/menu_call"
+        android:icon="@drawable/ic_menu_call"
+        resortmanager:showAsAction="ifRoom|collapseActionView"
+        android:title="Call"/>
+    <item android:id="@+id/menu_message"
+        android:icon="@drawable/ic_menu_message"
+        resortmanager:showAsAction="ifRoom|collapseActionView"
+        android:title="Message"/>
+    <item android:id="@+id/menu_email"
+        android:icon="@drawable/ic_menu_mail"
+        resortmanager:showAsAction="ifRoom|collapseActionView"
+        android:title="E-mail"/>
+    <item android:id="@+id/menu_save"
+        android:icon="@drawable/ic_menu_save"
+        resortmanager:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/menu_save"/>
+    <item android:id="@+id/menu_revert"
+        android:icon="@drawable/ic_menu_revert"
+        resortmanager:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/menu_revert"/>
     <item android:id="@+id/menu_delete"
         android:icon="@drawable/ic_menu_delete"
         resortmanager:showAsAction="ifRoom|collapseActionView"
